[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -349.5
margin_top = -374.5
margin_right = 349.5
margin_bottom = 374.5
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -80.0
margin_right = 95.5
margin_bottom = 80.0
rect_scale = Vector2( 1.22972, 1.22972 )

[node name="BtnInicio" type="Button" parent="VBoxContainer"]
margin_right = 191.0
margin_bottom = 20.0
text = "Inicio"

[node name="TxtJugadores" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 191.0
margin_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "Numero de jugadores"
fit_content_height = true

[node name="OpcJugadores" type="OptionButton" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 191.0
margin_bottom = 63.0
text = "2"
items = [ "2", null, false, 0, null, "3", null, false, 1, null, "4", null, false, 2, null, "5", null, false, 3, null, "6", null, false, 4, null ]
selected = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 191.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "Numero de fichas"
fit_content_height = true

[node name="OpcFichas" type="OptionButton" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 191.0
margin_bottom = 106.0
text = "2"
items = [ "2", null, false, 0, null, "3", null, false, 1, null, "4", null, false, 2, null ]
selected = 0

[node name="BtnCerrar" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 191.0
margin_bottom = 130.0
text = "Cerrar juego"

[connection signal="pressed" from="VBoxContainer/BtnInicio" to="." method="_on_BtnInicio_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCerrar" to="." method="_on_BtnCerrar_pressed"]
